makes updates to use HttpURLConnection